Use english catelog for Postgres full-text search and fix logo scaling on mobile devices

--- a/web-app/template-styles/blog-styles.css
+++ b/web-app/template-styles/blog-styles.css
@@ -33,7 +33,6 @@ header img {
   object-position: center;
 }
 
-nav,
 header,
 main {
   padding-block: var(--space-s);
@@ -69,11 +68,6 @@ footer > .container {
 
 section {
   scroll-margin-block-start: var(--space-xl);
-}
-
-.top-nav-logo {
-  max-block-size: var(--space-xl);
-  padding-block: var(--space-xs);
 }
 
 @media (min-width: 1525px) {
